a command for webpack config is set

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Learning PWA and trying to build my own",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
