production-config is set

--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
   },
   "homepage": "https://github.com/aleksei24/pWaWp#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.0",
     "sass": "^1.54.5",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
