--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
   },
   "homepage": "https://github.com/aleksei24/pWaWp#readme",
   "devDependencies": {
+    "@squoosh/lib": "^0.4.0",
     "autoprefixer": "^10.4.8",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
+    "image-minimizer-webpack-plugin": "^3.3.0",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
