--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-server": "^14.1.1",
     "image-minimizer-webpack-plugin": "^3.3.0",
     "imagemin": "^8.0.1",
+    "imagemin-webp": "^7.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
